# rr-yew-axum-sqlx

./: .gitignore  Makefile  README.md
client/: Cargo.toml  Makefile  index.html  tailwind.config.js
client/src/: main.rs
client/src/components/: header.rs
client/styles/: tailwind.css
server/: Cargo.toml  Makefile
server/.cargo/: config.toml
server/examples/: quick_dev.rs
server/src/: config.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs
server/src/_dev_utils/: dev_db.rs  mod.rs
server/src/web/: mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
server/tests/: quick_dev.rs
server/web-folder/: index.html
