[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
axum = {version = "0.7", features = ["macros"]}
tower-http ={ version = "0.5", features = ["fs"] }
tower-cookies = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy-regex="3"
async-trait = "0.1"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"
